# kivy-p4a-android-template

./: .gitignore  buildozer.spec  main.py  pyproject.toml  setup.py
myapp/gui/: __init__.py
myapp/myapp.egg-info/: entry_points.txt  requires.txt  top_level.txt
myapp/utils/: logging.py
src/myapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/myapp/cli/: cli.py
src/myapp/gui/: gui.py
src/myapp/myapp.egg-info/: PKG-INFO  SOURCES.txt
