[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['myapp']

[project]
name = "myapp"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = []

[project.optional-dependencies]
gui = [
    "kivy",
    ]
cli = [
    "click",
]

[project.scripts]
myapp = "myapp:cli.cli"
myapp-gui = "myapp:gui.gui"
